# pyshape

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree
_dev/: shape-dev.ipynb
_modules/: index.html
_modules/pyshape/: shape.html
docs/: api.md  conf.py  requirements.txt
pyshape/: __init__.py  shape.py
tests/: test_shape.py
