[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshape"
version = "0.1.0"
description = "A simple Python package for geometric shapes"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["geometry", "shapes", "mathematics"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/pyshape"
Repository = "https://github.com/yourusername/pyshape.git" 